snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210922.132251-3.module.sha256
d952fdd8e9c6d9ee1dbc1e9845758004c68930ee7ecf64356e0d6df43f17eaef